--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ img{
 }*/
 
 .menu {
-  background-color: #fff;
+  background-color: #ffffffa9;
   margin-top: 3rem;
   
 }
@@ -1832,6 +1832,7 @@ input{
 
 /*PAGINA METODOLOGIA DE ESTUDIO*/
 
+
 .metodologia-estudio{
   margin-top: 23rem;
   width: 100%;
@@ -1844,7 +1845,8 @@ input{
   flex-direction: column;
 }*/
 .seccion{
-  height: 50rem;
+  margin-top: 3rem;
+  height: 77rem;
 }
 .seccion h1{
   margin-top: 6rem;
@@ -2645,6 +2647,52 @@ input{
 }
 .notirecuadros p{
   font-size: 1.3rem;
+}
+
+
+.news-navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem 0;
+}
+
+.nav-button {
+  text-decoration: none;
+  color: #fff;
+  background-color: rgba(29, 50, 123, 0.7);
+  padding: 1rem 2rem;
+  margin: 0 1rem;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+}
+
+.nav-button:hover {
+  background-color: #1d327b;
+  color: #ffe800;
+}
+
+.nav-button i {
+  margin-right: 0.5rem;
+}
+
+/*#home i {
+  margin-right: 0;
+  margin-left: 0.5rem;
+}*/
+
+#next i {
+  margin-left: 0.5rem;
+  margin-right: 0;
+}
+
+@media(min-width: 768px){
+  .noticia{
+    margin-top: 30rem;
+    /*height: 77rem;*/
+  }
 }
 
 /*SECCION BOTONES*/
